Bug 291154 - 'Description' input in semantic/information panel has wrong color
Summary: 'Description' input in semantic/information panel has wrong color
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdeui (other bugs)
Version First Reported In: 4.9-Git
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-10 11:08 UTC by Martin Klapetek
Modified: 2012-07-21 14:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments
All three sidebars for color comparison (60.41 KB, image/png)
2012-01-10 11:08 UTC, Martin Klapetek
Details
Disabled palette with the same color scheme (26.04 KB, image/png)
2012-01-10 11:22 UTC, Martin Klapetek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Klapetek 2012-01-10 11:08:43 UTC
Created attachment 67650 [details]
All three sidebars for color comparison

Version:           Git (add output of "git log -1 --oneline" to description) (using Devel) 
OS:                Linux

The click message/placeholder text inside the semantic description text area has wrong color/palette type as it is unreadable with dark views. I'm not sure if it is the color scheme bug or Gwenview's bug. However entered text has correct color, it's just the click message.

See attached screenshot.

Reproducible: Always

Steps to Reproduce:
1) Set some theme with dark views background
2) Look at the description text area in 'Information' panel

Actual Results:  
The placeholder text is unreadable (has too dark color).

Expected Results:  
Readable text.
Comment 1 Martin Klapetek 2012-01-10 11:22:39 UTC
Created attachment 67652 [details]
Disabled palette with the same color scheme

I opened qtconfig and tried the 'Disabled Palette' to check the font color in the views, it is readable, so it does not seem to be color scheme bug. I might be wrong though :)
Comment 2 Christoph Feck 2012-07-21 14:36:10 UTC
Git commit 97978d8ef428cba86e824d3608158421eaad230f by Christoph Feck.
Committed on 21/07/2012 at 16:33.
Pushed by cfeck into branch 'KDE/4.9'.

Fix text color role by using viewport widget
FIXED-IN: 4.9.0

M  +1    -1    kdeui/widgets/ktextedit.cpp

http://commits.kde.org/kdelibs/97978d8ef428cba86e824d3608158421eaad230f