Fix text color role by using viewport widget

BUG: 291154
FIXED-IN: 4.9.0